[gd_scene load_steps=7 format=3 uid="uid://bg5f4xak7sftv"]

[ext_resource type="Script" uid="uid://cnqhuw8f5m46m" path="res://scripts/TitleScreen.gd" id="1_ak2if"]
[ext_resource type="Texture2D" uid="uid://c67xpnj35t4a2" path="res://assets/sprites/background-escurecido.png" id="2_4l16e"]
[ext_resource type="Theme" uid="uid://dctpcbq0vp6lp" path="res://themes/TitleScreen.theme" id="3_4l16e"]
[ext_resource type="Script" uid="uid://c51w6abbk0yqj" path="res://scripts/AnimatedButton.gd" id="3_8k5og"]
[ext_resource type="FontFile" uid="uid://c8l7xewo111n3" path="res://themes/Tinos-Regular.ttf" id="4_85feu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4l16e"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ak2if")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4l16e")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 13

[node name="Titulo" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_4l16e")
text = "JOGO DE ESTÍMULO COGNITIVO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtítulo" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.81960785, 0.8352941, 0.85882354, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_85feu")
theme_override_font_sizes/font_size = 24
text = "COM ELEMENTOS DE RPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_4l16e")

[node name="New" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_4l16e")
text = "Novo Jogo"
icon_alignment = 1
script = ExtResource("3_8k5og")

[node name="Load" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_4l16e")
text = "Carregar Jogo"
icon_alignment = 1
script = ExtResource("3_8k5og")

[node name="Options" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_4l16e")
text = "Opções"
script = ExtResource("3_8k5og")

[node name="Credits" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" groups=["menu_buttons"]]
layout_mode = 2
theme = ExtResource("3_4l16e")
text = "Créditos"
script = ExtResource("3_8k5og")

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer" groups=["menu_buttons"]]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_4l16e")
text = "Sair"
script = ExtResource("3_8k5og")

[node name="Start" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.5
offset_top = -40.0
offset_right = 126.5
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 14
text = "© 2025 - Pressione para começar"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
